[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/custom/CGFDiscard.gd" type="Script" id=1]
[ext_resource path="res://src/core/Pile.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/custom/CGFHand.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/custom/CGFDeck.gd" type="Script" id=4]
[ext_resource path="res://src/custom/CGFBoard.gd" type="Script" id=5]
[ext_resource path="res://src/custom/CGFCounters.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/custom/CGFPlacementGridDemo.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/custom/CGFModifiedLabelGrid.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://src/custom/CGFDeckbuilder/CGFDeckBuilder.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/core/CardViewer/DeckBuilder/DBDeckCardObject.tscn" type="PackedScene" id=11]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=12]
[ext_resource path="res://src/core/CardViewer/DeckBuilder/DBDeckSummaries.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="Board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 12 )
script = ExtResource( 5 )

[node name="Deck" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 475 )
script = ExtResource( 4 )
placement = 8
pile_name = "Deck"

[node name="VBoxContainer" parent="Deck/Control/CenterContainer" index="0"]
margin_right = 68.0
margin_bottom = 109.0

[node name="Label" parent="Deck/Control/CenterContainer/VBoxContainer" index="0"]
margin_right = 68.0

[node name="PanelContainer" parent="Deck/Control/CenterContainer/VBoxContainer" index="1"]
margin_top = 32.0
margin_right = 68.0
margin_bottom = 61.0

[node name="CenterContainer" parent="Deck/Control/CenterContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 68.0

[node name="CardCount" parent="Deck/Control/CenterContainer/VBoxContainer/PanelContainer/CenterContainer" index="0"]
margin_right = 45.0

[node name="View" parent="Deck/Control/ManipulationButtons" index="0"]
margin_right = 26.0
margin_bottom = 27.0

[node name="ViewSorted" parent="Deck/Control/ManipulationButtons" index="1"]
margin_top = 30.0
margin_right = 26.0
margin_bottom = 57.0

[node name="Shuffle" parent="Deck/Control/ManipulationButtons" index="2"]
margin_top = 60.0
margin_right = 26.0
margin_bottom = 87.0

[node name="CardView" parent="Deck/ViewPopup" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 6.0

[node name="Position" parent="Deck/Debug" index="0"]
margin_bottom = 23.0

[node name="AreaPos" parent="Deck/Debug" index="1"]
margin_top = 26.0
margin_bottom = 49.0

[node name="Size" parent="Deck/Debug" index="2"]
margin_top = 52.0
margin_bottom = 75.0

[node name="Discard" parent="." instance=ExtResource( 2 )]
position = Vector2( 1124, 475 )
script = ExtResource( 1 )
placement = 6
faceup_cards = true

[node name="Control" parent="Discard" index="0"]
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" parent="Discard/Control/CenterContainer" index="0"]
margin_right = 68.0
margin_bottom = 109.0

[node name="Label" parent="Discard/Control/CenterContainer/VBoxContainer" index="0"]
margin_right = 68.0

[node name="PanelContainer" parent="Discard/Control/CenterContainer/VBoxContainer" index="1"]
margin_top = 32.0
margin_right = 68.0
margin_bottom = 61.0

[node name="CenterContainer" parent="Discard/Control/CenterContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 68.0

[node name="CardCount" parent="Discard/Control/CenterContainer/VBoxContainer/PanelContainer/CenterContainer" index="0"]
margin_right = 45.0

[node name="View" parent="Discard/Control/ManipulationButtons" index="0"]
margin_right = 26.0
margin_bottom = 27.0

[node name="ViewSorted" parent="Discard/Control/ManipulationButtons" index="1"]
margin_top = 30.0
margin_right = 26.0
margin_bottom = 57.0

[node name="Shuffle" parent="Discard/Control/ManipulationButtons" index="2"]
margin_top = 60.0
margin_right = 26.0
margin_bottom = 87.0

[node name="CardView" parent="Discard/ViewPopup" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 6.0

[node name="Position" parent="Discard/Debug" index="0"]
margin_bottom = 23.0

[node name="AreaPos" parent="Discard/Debug" index="1"]
margin_top = 26.0
margin_bottom = 49.0

[node name="Size" parent="Discard/Debug" index="2"]
margin_top = 52.0
margin_bottom = 75.0

[node name="Hand" parent="." instance=ExtResource( 3 )]
position = Vector2( 155, 480 )

[node name="Counters" parent="." instance=ExtResource( 6 )]
margin_top = 205.0
margin_bottom = 219.0

[node name="FancyMovementToggle" type="CheckButton" parent="."]
margin_right = 12.0
margin_bottom = 20.0
pressed = true
text = "Fancy Movement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnableAttach" type="CheckButton" parent="."]
margin_left = 194.978
margin_top = 1.33486
margin_right = 395.978
margin_bottom = 41.3349
text = "Enable Attachment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScalingFocusOptions" type="OptionButton" parent="."]
margin_left = -1.33484
margin_top = 44.0497
margin_right = 187.665
margin_bottom = 84.0497
pressed = true
text = "Scaling + Viewport Focus"
items = [ "Scaling Focus", null, false, 0, null, "Viewport Focus", null, false, 1, null, "Scaling + Viewport Focus", null, false, 2, null, "Scaling + Info Panels", null, false, 3, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReshuffleAllDeck" type="Button" parent="."]
margin_left = 9.89948
margin_top = 116.762
margin_right = 200.899
margin_bottom = 136.762
text = "Reshuffle all cards into deck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReshuffleAllDiscard" type="Button" parent="."]
margin_left = 9.89948
margin_top = 140.334
margin_right = 200.899
margin_bottom = 160.334
text = "Reshuffle all cards into discard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OvalHandToggle" type="CheckButton" parent="."]
margin_left = 405.31
margin_top = 1.12245
margin_right = 594.31
margin_bottom = 41.1225
pressed = true
text = "Oval Hand Shape"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckBuilder" type="Button" parent="."]
margin_left = 234.698
margin_top = 45.0
margin_right = 374.698
margin_bottom = 85.0
text = "DeckBuilder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMain" type="Button" parent="."]
margin_left = 393.448
margin_top = 43.7401
margin_right = 533.448
margin_bottom = 83.7401
text = "Back to Main"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="CheckButton" parent="."]
margin_left = 789.192
margin_top = 3.36737
margin_right = 978.192
margin_bottom = 43.3674
pressed = true
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlacementGridDemo" parent="." instance=ExtResource( 7 )]
margin_left = 775.0
margin_top = 240.0
margin_right = 1274.0
margin_bottom = 436.0
highlight = Color( 0.985156, 0, 1.3, 1.3 )

[node name="ModifiedLabelGrid" parent="." instance=ExtResource( 8 )]
margin_left = 1015.0
margin_top = 30.0
margin_right = 1264.0
margin_bottom = 226.0

[node name="SeedLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 175.0
margin_right = 265.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 2 )
text = "Game Seed is: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckBuilderPopup" type="PopupPanel" parent="."]
margin_right = 1000.0
margin_bottom = 600.0
rect_min_size = Vector2( 800, 0 )

[node name="DeckBuilder" parent="DeckBuilderPopup" instance=ExtResource( 10 )]
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
custom_styles/panel = SubResource( 3 )
random_adverb_miss = 10
random_adjective_miss = 1.1
random_append_miss = 2
second_noun_miss = 3
max_quantity = 3
deck_minimum = 52
deck_maximum = 60
deck_card_object_scene = ExtResource( 11 )
deck_summary_scene = ExtResource( 13 )

[connection signal="toggled" from="FancyMovementToggle" to="." method="_on_FancyMovementToggle_toggled"]
[connection signal="toggled" from="EnableAttach" to="." method="_on_EnableAttach_toggled"]
[connection signal="item_selected" from="ScalingFocusOptions" to="." method="_on_ScalingFocusOptions_item_selected"]
[connection signal="pressed" from="ReshuffleAllDeck" to="." method="_on_ReshuffleAllDeck_pressed"]
[connection signal="pressed" from="ReshuffleAllDiscard" to="." method="_on_ReshuffleAllDiscard_pressed"]
[connection signal="toggled" from="OvalHandToggle" to="." method="_on_OvalHandToggle_toggled"]
[connection signal="pressed" from="DeckBuilder" to="." method="_on_DeckBuilder_pressed"]
[connection signal="pressed" from="BackToMain" to="." method="_on_BackToMain_pressed"]
[connection signal="toggled" from="Debug" to="." method="_on_Debug_toggled"]

[editable path="Deck"]
[editable path="Discard"]
